# ros_lego_nxt

./: README.md
create_autonomy/ca_tools/config/: xbox360.yaml
create_autonomy/ca_tools/launch/: joy_teleop.launch
nxt/: README.md
nxt/nxt_controllers/: CMakeLists.txt  package.xml  setup.py
nxt/nxt_controllers/src/nxt_controllers/: base_controller.py  base_odometry.py  joint_position_controller.py
nxt/nxt_description/: CMakeLists.txt  package.xml
nxt/nxt_msgs/: CMakeLists.txt  package.xml
nxt/nxt_msgs/msg/: Sound.msg
nxt/nxt_python/: CMakeLists.txt  package.xml  setup.py
nxt/nxt_ros/: CMakeLists.txt  package.xml  setup.py
nxt/nxt_ros/src/nxt_ros/: joint_states_aggregator.py  nxt_ros.py
nxt/nxt_ros_test/: CMakeLists.txt  package.xml
nxt/nxt_ros_test/launch/: test.launch
nxt_robots/: README.md
nxt_robots/nxt_robots_gyro_car/: CMakeLists.txt  package.xml
nxt_robots/nxt_robots_gyro_car/config/: robot.yaml
nxt_robots/nxt_robots_gyro_car/launch/: robot.launch
nxt_robots/nxt_robots_gyro_car/urdf/: robot.lxf
nxt_robots/nxt_robots_sensor_car/: CMakeLists.txt  package.xml
nxt_robots/nxt_robots_sensor_car/config/: robot.yaml
nxt_robots/nxt_robots_sensor_car/launch/: robot.launch
nxt_robots/nxt_robots_sensor_car/scripts/: range_to_pointcloud.py
nxt_robots/nxt_robots_sensor_car/urdf/: robot.urdf
nxt_teleop/: CMakeLists.txt  README.md  package.xml
nxt_teleop/config/: robot.yaml
nxt_teleop/launch/: teleop_joy.launch  teleop_keyboard.launch
nxt_teleop/src/: nxt_joy.cpp  nxt_key.cpp
nxt_viz/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
point_cloud_converter/: frames.gv
point_cloud_converter/launch/: point_cloud_converter.launch
