<?xml version="1.0"?>
<package>
  <name>nxt_viz</name>
  <version>1.1.0</version>
  <description>
    Plugins for visualizing data coming from the Lego NXT Brick in Rviz.
    Suitable for ROS Groovy and newer
  </description>

  <maintainer email="thomas@todo.todo">Thomas Poulet</maintainer>
  <author>David Butterworth</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nxt_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nxt_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
