<?xml version="1.0"?>
<package>
  <name>nxt_controllers</name>
  <version>1.1.0</version>
  <description>
    The nxt_controllers package provides a number of Python-based
    controllers for two-wheeled diff drive robots. The base
    controllers allows you to send velocity commands to a diff drive
    base, while the base odometry tracks the pose of a diff drive
    robot. The nxt_controllers package also contains a general
    purpose joint position controller that commnads a joint to a
    desired position by sending effort commands to the joint and
    reading the joint encoders.
  </description>

  <maintainer email="thomas@todo.todo">Thomas Poulet</maintainer>
  <author>Wim Meeussen</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>orocos_kdl</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>nxt_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <run_depend>orocos_kdl</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>nxt_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
</package>
