<?xml version="1.0"?>
<package>
  <name>nxt_msgs</name>
  <version>1.1.0</version>
  <description>
    The nxt_msgs package contains a set of messages to publish
    data coming from various NXT sensor.
  </description>

  <maintainer email="thomas@todo.todo">Thomas Poulet</maintainer>
  <author>Wim Meeussen</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
