<?xml version="1.0"?>
<package>
  <name>nxt_python</name>
  <version>1.1.0</version>
  <description>
    This package automatically downloads version 1.1.2 of the
    <a href="http://code.google.com/p/nxt-python">NXT-python</a>
    library. We intend to upgrade to the 2.0.x version of this library
    when it becomes available. NXT-python is a libraray for
    controlling a LEGO NXT robot using the Python programming
    language. It can communicate using either USB or Bluetooth. It is
    available under the Free Software Foundation's GPL license.
  </description>

  <maintainer email="thomas@todo.todo">Thomas Poulet</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>
</package>
